# api/system/controller/sysDept.go
@@ -3,12 +3,14 @@ package controller
 import (
 	"gin-api/api/system/model"
 	"gin-api/api/system/service"
-	"github.com/gin-gonic/gin"
 	"strconv"
+
+	"github.com/gin-gonic/gin"
 )
 
 var sysDept model.SysDept
 
+// @Tags system系统管理
 // 查询部门列表
 // @Summary 查询部门列表接口
 // @Produce json
@@ -24,6 +26,7 @@ func GetSysDeptList(c *gin.Context) {
 	service.SysDeptService().GetSysDeptList(c, DeptName, DeptStatus)
 }
 
+// @Tags system系统管理
 // 新增部门
 // @Summary 新增部门接口
 // @Produce json
@@ -37,6 +40,7 @@ func CreateSysDept(c *gin.Context) {
 	service.SysDeptService().CreateSysDept(c, sysDept)
 }
 
+// @Tags system系统管理
 // 根据id查询部门
 // @Summary 根据id查询部门接口
 // @Produce json
@@ -50,6 +54,7 @@ func GetSysDeptById(c *gin.Context) {
 	service.SysDeptService().GetSysDeptById(c, Id)
 }
 
+// @Tags system系统管理
 // 修改部门
 // @Summary 修改部门接口
 // @Produce json
@@ -63,6 +68,7 @@ func UpdateSysDept(c *gin.Context) {
 	service.SysDeptService().UpdateSysDept(c, sysDept)
 }
 
+// @Tags system系统管理
 // 根据id删除部门
 // @Summary 根据id删除部门接口
 // @Produce json
@@ -77,6 +83,7 @@ func DeleteSysDeptById(c *gin.Context) {
 	service.SysDeptService().DeleteSysDeptById(c, dto)
 }
 
+// @Tags system系统管理
 // 部门下拉列表
 // @Summary 部门下拉列表接口
 // @Produce json
@@ -88,6 +95,7 @@ func QuerySysDeptVoList(c *gin.Context) {
 	service.SysDeptService().QuerySysDeptVoList(c)
 }
 
+// @Tags system系统管理
 // 获取某部门下的所有用户
 // @Summary 获取某部门下的所有用户接口
 // @Produce json
