# api/system/controller/sysMenu.go
@@ -6,12 +6,14 @@ package controller
 import (
 	"gin-api/api/system/model"
 	"gin-api/api/system/service"
-	"github.com/gin-gonic/gin"
 	"strconv"
+
+	"github.com/gin-gonic/gin"
 )
 
 var sysMenu model.SysMenu
 
+// @Tags system系统管理
 // 新增菜单
 // @Summary 新增菜单接口
 // @Produce json
@@ -25,6 +27,7 @@ func CreateSysMenu(c *gin.Context) {
 	service.SysMenuService().CreateSysMenu(c, sysMenu)
 }
 
+// @Tags system系统管理
 // 查询新增选项列表
 // @Summary 查询新增选项列表接口
 // @Produce json
@@ -36,6 +39,7 @@ func QuerySysMenuVoList(c *gin.Context) {
 	service.SysMenuService().QuerySysMenuVoList(c)
 }
 
+// @Tags system系统管理
 // 根据id查询菜单
 // @Summary 根据id查询菜单
 // @Produce json
@@ -49,6 +53,7 @@ func GetSysMenu(c *gin.Context) {
 	service.SysMenuService().GetSysMenu(c, Id)
 }
 
+// @Tags system系统管理
 // 修改菜单
 // @Summary 修改菜单接口
 // @Produce json
@@ -62,6 +67,7 @@ func UpdateSysMenu(c *gin.Context) {
 	service.SysMenuService().UpdateSysMenu(c, sysMenu)
 }
 
+// @Tags system系统管理
 // 根据id删除菜单
 // @Summary 根据id删除菜单接口
 // @Produce json
@@ -76,6 +82,7 @@ func DeleteSysMenu(c *gin.Context) {
 	service.SysMenuService().DeleteSysMenu(c, dto)
 }
 
+// @Tags system系统管理
 // 查询菜单列表
 // @Summary 查询菜单列表
 // @Produce json
