# router/k8s/k8s.go
@@ -1,1 +1,12 @@
 package k8s
+
+import (
+	"gin-api/api/k8s/controller"
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterK8sRoutes(router *gin.RouterGroup) {
+	router.GET("/clusters", controller.QueryCluster)
+	router.POST("/clusters/add", controller.CreateCluster)
+	router.POST("/clusters/update", controller.UpdateCluster)
+}
